amazon-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: amazon-deployment
  labels:
    env: prod
    author: Tawfeeq
spec:
  replicas: 2
  selector:
    matchLabels:
      app: amazon-app
  stragety:
    type: RollingUpdate
    rollingUpdate:
      maxUnavaliable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: amazon-app
    spec:
      containers:
        - name: amzon
          image: tawfeeq421/amazon
          imagePullPolicy: Always
          ports:
            containerPort: 3000
          resources:
            requests:
              cpu: 150m
              memory: 120Mi
            limits:
              cpu: 250m
              memory: 220Mi
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10

          readynessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
