amazon-service.yml
apiVersion: v1
kind: Service
metadata:
  name: amazon-service
  labels:
    env: prod
    author: Tawfeeq
spec:
  type: ClusterIP
  selector:
    app: amazon-app
    ports:
      - targetPort: 3000
        port: 80
        protocol: TCP
