game-service.yml
apiVersion: v1
kind: Service
metadata:
  name: game-service
  namespace: prod
  labels:
    env: prod
    author: Tawfeeq
spec:
  type: ClusterIP
  selector:
    app: game-app
  ports:
    - targetPort: 3000
      port: 80
      protocol: TCP
