ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - example.amazon.io
      secretName: amazon-tls
  rules:
    - host: example.amazon.in
      http:
        paths:
          - path: /game
            pathType: Prefix
            backend:
             service: 
               name: game-service
               port:
                 number: 80

          - path: /netflix
            pathType: Prefix
            backend:
              service:
                name: netflix-service
                port:
                  number: 80
        
          - path: /
            pathType: Prefix
            backend:
              service:
                name: amazon-service
                port:
                  number: 80
